# tp_ia

./: .gitignore  CMakeLists.txt  Cor.h  Final.txt  Gui.cpp  Gui.h  MyNeuralNetwork.cpp  MyNeuralNetwork.h  NeuralNetwork.cpp  NeuralTrainer.cpp  NeuralTrainer.h  PostTraining.txt  PreTraining.txt  README.md  RigidBody2D.cpp  RigidBody2D.h  execute.sh  magic.cpp  magic.h  main.cpp  mymath.h
src/: main.cpp
src/engine/: RigidBody2D.cpp  RigidBody2D.h  Vector.cpp  Vector.h
src/game/: Gui.cpp  Gui.h  magic.cpp  magic.h
src/neural/: NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkLayer.cpp  NeuralNetworkLayer.h  NeuralTrainer.cpp  NeuralTrainer.h
